--- a/app/src/main/res/layout/batching_guide.xml
+++ b/app/src/main/res/layout/batching_guide.xml
@@ -21,10 +21,10 @@
 
             <TextView
                 android:id="@+id/user_guide"
-                android:layout_width="278dp"
-                android:layout_height="37dp"
+                android:layout_width="247dp"
+                android:layout_height="38dp"
                 android:gravity="center"
-                android:text="Batching"
+                android:text="Matching"
                 android:textAppearance="?attr/textAppearanceHeadline5"
                 android:theme="@style/page_title"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -57,5 +57,101 @@
             android:layout_marginTop="10dp"
             android:layout_marginBottom="20dp"
             android:background="@color/horizontal_line" />
+
+        <!--        -->
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="20dp"
+            android:layout_marginBottom="10dp">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Step 1:"
+                android:gravity="center"
+                android:theme="@style/page_heading">
+            </TextView>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="15dp"
+            android:layout_marginEnd="15dp"
+            android:orientation="horizontal"
+            android:padding="20dp"
+            android:background="@drawable/round_corner">
+
+            <ImageView
+                android:layout_width="150dp"
+                android:layout_height="300dp"
+                android:contentDescription="placeholder"
+                android:src="@drawable/matches"
+                tools:ignore="HardcodedText"
+                android:scaleType="fitXY"/>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="20dp"
+                android:text="Navigate to the Match Tab.\n\nDislike by selecting the X button to skip.\n\nLike by selecting the HEART button to initiate the matching.\n\nNote: Must set a primary group prior to viewing matches."
+                >
+            </TextView>
+        </LinearLayout>
+
+        <!--        -->
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="20dp"
+            android:layout_marginBottom="10dp">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Step 2:"
+                android:gravity="center"
+                android:theme="@style/page_heading"
+                android:layout_marginTop="15dp">
+            </TextView>
+        </LinearLayout>
+
+        <LinearLayout
+
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="15dp"
+            android:layout_marginEnd="15dp"
+            android:orientation="horizontal"
+            android:padding="20dp"
+            android:layout_marginBottom="50dp"
+            android:background="@drawable/round_corner">
+
+            <ImageView
+                android:layout_width="150dp"
+                android:layout_height="300dp"
+                android:src="@drawable/vote_matches"
+                android:contentDescription="placeholder"
+                tools:ignore="HardcodedText"
+                android:scaleType="fitXY" />
+            <TextView
+                android:layout_marginStart="10dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:text="Users in the same primary group get to vote which group they would want to joint group with.\n\nMajority vote wins! "
+                >
+            </TextView>
+        </LinearLayout>
+
+<!--        -->
     </LinearLayout>
 </ScrollView>
