--- a/app/src/main/res/layout/fragment_user_guide.xml
+++ b/app/src/main/res/layout/fragment_user_guide.xml
@@ -333,7 +333,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="'Batching'"
+                    android:text="Matching"
                     android:theme="@style/page_heading"
                     tools:ignore="HardcodedText" />
 
