--- a/app/src/main/res/layout/join_group_guide.xml
+++ b/app/src/main/res/layout/join_group_guide.xml
@@ -276,6 +276,7 @@
             android:layout_marginEnd="15dp"
             android:orientation="horizontal"
             android:padding="20dp"
+            android:layout_marginBottom="50dp"
             android:background="@drawable/round_corner">
 
             <ImageView
