--- a/app/src/main/res/layout/set_primary_guide.xml
+++ b/app/src/main/res/layout/set_primary_guide.xml
@@ -21,12 +21,13 @@
 
             <TextView
                 android:id="@+id/user_guide"
-                android:layout_width="278dp"
-                android:layout_height="37dp"
+                android:layout_width="247dp"
+                android:layout_height="38dp"
                 android:gravity="center"
-                android:text="Set primary group"
+                android:text="Set Primary Group"
                 android:textAppearance="?attr/textAppearanceHeadline5"
                 android:theme="@style/page_title"
+                android:textSize="25sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -48,6 +49,7 @@
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintVertical_bias="0.0" />
 
+
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <View
@@ -57,5 +59,102 @@
             android:layout_marginTop="10dp"
             android:layout_marginBottom="20dp"
             android:background="@color/horizontal_line" />
+
+
+        <!--        -->
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="20dp"
+            android:layout_marginBottom="10dp">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Step 1:"
+                android:gravity="center"
+                android:theme="@style/page_heading">
+            </TextView>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="15dp"
+            android:layout_marginEnd="15dp"
+            android:orientation="horizontal"
+            android:padding="20dp"
+            android:background="@drawable/round_corner">
+
+            <ImageView
+                android:layout_width="150dp"
+                android:layout_height="300dp"
+                android:contentDescription="placeholder"
+                android:src="@drawable/swipe_primary"
+                tools:ignore="HardcodedText"
+                android:scaleType="fitXY"/>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="20dp"
+                android:text="Swipe right on the selected group.\n\nClick on the STAR button to activate."
+                >
+            </TextView>
+        </LinearLayout>
+
+        <!--        -->
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="20dp"
+            android:layout_marginBottom="10dp">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Step 2:"
+                android:gravity="center"
+                android:theme="@style/page_heading"
+                android:layout_marginTop="15dp">
+            </TextView>
+        </LinearLayout>
+
+        <LinearLayout
+
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="15dp"
+            android:layout_marginEnd="15dp"
+            android:orientation="horizontal"
+            android:padding="20dp"
+            android:layout_marginBottom="50dp"
+            android:background="@drawable/round_corner">
+
+            <ImageView
+                android:layout_width="150dp"
+                android:layout_height="300dp"
+                android:src="@drawable/confirm_primary"
+                android:contentDescription="placeholder"
+                tools:ignore="HardcodedText"
+                android:scaleType="fitXY" />
+            <TextView
+                android:layout_marginStart="10dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:text="Confirm to set the selected group as Primary Group for matching."
+                >
+            </TextView>
+        </LinearLayout>
+
+
     </LinearLayout>
 </ScrollView>
