Fixed Dialog UI and fixed bug for myGroups page and chat entry

--- a/app/src/main/res/layout/fragment_matched_group_dialog.xml
+++ b/app/src/main/res/layout/fragment_matched_group_dialog.xml
@@ -8,12 +8,29 @@
     android:background="@color/app_background"
     tools:context=".MatchedGroupDialogFragment">
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/fragment_matched_group_dialog_rv"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:layout_constraintBottom_toBottomOf="parent"
+    <TextView
+        android:id="@+id/fragment_matched_group_dialog_tv"
+        style="@style/page_title"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="16dp"
+        android:text="@string/fragmet_mgdialog_title"
+        android:textAlignment="center"
+        android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/fragment_matched_group_dialog_rv"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_marginTop="32dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/fragment_matched_group_dialog_tv" />
 </androidx.constraintlayout.widget.ConstraintLayout>
