--- a/app/src/main/res/layout/matched_group_dialog_recycler_view_row.xml
+++ b/app/src/main/res/layout/matched_group_dialog_recycler_view_row.xml
@@ -11,7 +11,9 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
+        android:background="@color/teal_700"
         android:text="@string/my_groups"
         android:textAlignment="center"
+        android:textColor="@color/white"
         android:textSize="24sp" />
 </LinearLayout>
