--- a/app/src/main/res/layout/block_bottom_view.xml
+++ b/app/src/main/res/layout/block_bottom_view.xml
@@ -1,33 +1,61 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:background="@color/app_background">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent">
 
         <TextView
             android:id="@+id/tv_block_warning"
-            android:layout_width="300dp"
-            android:layout_height="100dp"
-
-            android:textAlignment="center"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Block group"
             android:textSize="15sp"
+            android:textStyle="bold"
+            android:textAlignment="center"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             />
+
+        <TextView
+            android:id="@+id/tv_group_warning"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Group will be removed from matching tab"
+            app:layout_constraintTop_toBottomOf="@id/tv_block_warning"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"/>
+
+        <TextView
+            android:id="@+id/tv_discover_warning"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Group will not appear in discovery matching"
+            app:layout_constraintTop_toBottomOf="@id/tv_group_warning"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"/>
+        <TextView
+            android:id="@+id/tv_question_verify"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@id/tv_discover_warning"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"/>
+
+
 
         <Button
             android:id="@+id/btn_ok"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/tv_block_warning"
+            app:layout_constraintTop_toBottomOf="@id/tv_question_verify"
             app:layout_constraintEnd_toStartOf="@+id/btn_cancel"
             android:text="Yes"
             />
@@ -35,7 +63,7 @@
             android:id="@+id/btn_cancel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@id/tv_block_warning"
+            app:layout_constraintTop_toBottomOf="@id/tv_question_verify"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/btn_ok"
 
