added more user guides

--- a/app/src/main/res/layout/getting_started_guide.xml
+++ b/app/src/main/res/layout/getting_started_guide.xml
@@ -167,7 +167,55 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Step 3: View matches"
+                android:text="Step 3: Set group preferences"
+                android:gravity="center"
+                android:theme="@style/page_heading"
+                android:layout_marginTop="15dp">
+            </TextView>
+        </LinearLayout>
+
+        <LinearLayout
+
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="15dp"
+            android:layout_marginEnd="15dp"
+            android:orientation="horizontal"
+            android:padding="20dp"
+            android:background="@drawable/round_corner">
+
+            <ImageView
+                android:layout_width="150dp"
+                android:layout_height="300dp"
+                android:src="@drawable/open_preferences"
+                android:contentDescription="placeholder"
+                tools:ignore="HardcodedText"
+                android:scaleType="centerCrop" />
+            <TextView
+                android:layout_marginStart="10dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:text="Set group preferences to only show groups that you would like to see on matches.\n\nPreferences are use to filter out distance, age range, gender population of the group."
+                >
+            </TextView>
+        </LinearLayout>
+
+        <!--        -->
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginEnd="20dp"
+            android:layout_marginBottom="10dp">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Step 4: View matches"
                 android:gravity="center"
                 android:theme="@style/page_heading"
                 android:layout_marginTop="15dp">
@@ -216,7 +264,7 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Step 4: Likes and Dislikes"
+                android:text="Step 5: Likes and Dislikes"
                 android:gravity="center"
                 android:theme="@style/page_heading"
                 android:layout_marginTop="15dp">
@@ -265,7 +313,7 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Step 5: Voting"
+                android:text="Step 6: Voting"
                 android:gravity="center"
                 android:theme="@style/page_heading"
                 android:layout_marginTop="15dp">
@@ -314,7 +362,7 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Step 6: Group Chat"
+                android:text="Step 7: Group Chat"
                 android:gravity="center"
                 android:theme="@style/page_heading"
                 android:layout_marginTop="15dp">
