--- a/app/src/main/res/layout/set_group_preferences_guide.xml
+++ b/app/src/main/res/layout/set_group_preferences_guide.xml
@@ -24,9 +24,10 @@
                 android:layout_width="247dp"
                 android:layout_height="38dp"
                 android:gravity="center"
-                android:text="Matching"
+                android:text="Set Group Preferences"
                 android:textAppearance="?attr/textAppearanceHeadline5"
                 android:theme="@style/page_title"
+                android:textSize="20sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -34,7 +35,7 @@
                 app:layout_constraintVertical_bias="0.4" />
 
             <Button
-                android:id="@+id/backto_guide_from_batching"
+                android:id="@+id/backto_guide_from_set_preferences"
                 style="@style/Widget.AppCompat.Button.Borderless"
                 android:layout_width="59dp"
                 android:layout_height="43dp"
@@ -48,6 +49,7 @@
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintVertical_bias="0.0" />
 
+
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <View
@@ -57,6 +59,7 @@
             android:layout_marginTop="10dp"
             android:layout_marginBottom="20dp"
             android:background="@color/horizontal_line" />
+
 
         <!--        -->
         <LinearLayout
@@ -90,7 +93,7 @@
                 android:layout_width="150dp"
                 android:layout_height="300dp"
                 android:contentDescription="placeholder"
-                android:src="@drawable/matches"
+                android:src="@drawable/mygroup_list"
                 tools:ignore="HardcodedText"
                 android:scaleType="fitXY"/>
 
@@ -99,7 +102,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
                 android:layout_marginTop="20dp"
-                android:text="Navigate to the Match Tab.\n\nDislike by selecting the X button to skip.\n\nLike by selecting the HEART button to initiate the matching.\n\nNote: Must set a primary group prior to viewing matches."
+                android:text="Navigate to My Group tab.\n\nClick on the selected group photo icon to view group profile information."
                 >
             </TextView>
         </LinearLayout>
@@ -137,7 +140,7 @@
             <ImageView
                 android:layout_width="150dp"
                 android:layout_height="300dp"
-                android:src="@drawable/vote_matches"
+                android:src="@drawable/discovery_preferences"
                 android:contentDescription="placeholder"
                 tools:ignore="HardcodedText"
                 android:scaleType="fitXY" />
@@ -146,12 +149,11 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
-                android:text="Under the Pending tab, users in the same primary group vote for which group they want to match with.\n\nIf the majority approves, a new group is formed.\n\nUse the button functionality to cast your vote."
+                android:text="In the group profile, click on 3 dots context menu on the top right corner.\n\nSelect Discovery Preferences from the menu."
                 >
             </TextView>
         </LinearLayout>
-
-        <!--        -->
+<!--        -->
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -159,47 +161,47 @@
             android:layout_marginStart="20dp"
             android:layout_marginTop="10dp"
             android:layout_marginEnd="20dp"
-            android:layout_marginBottom="10dp"
-           >
+            android:layout_marginBottom="10dp">
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="15dp"
                 android:text="Step 3:"
                 android:gravity="center"
-                android:theme="@style/page_heading"
-                android:layout_marginTop="15dp">
+                android:theme="@style/page_heading">
             </TextView>
         </LinearLayout>
 
         <LinearLayout
-
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="15dp"
             android:layout_marginEnd="15dp"
             android:orientation="horizontal"
+            android:layout_marginBottom="50dp"
             android:padding="20dp"
-
-            android:background="@drawable/round_corner"
-            android:layout_marginBottom="50dp">
+            android:background="@drawable/round_corner">
 
             <ImageView
                 android:layout_width="150dp"
                 android:layout_height="300dp"
-                android:src="@drawable/matched_groups"
                 android:contentDescription="placeholder"
+                android:src="@drawable/open_preferences"
                 tools:ignore="HardcodedText"
-                android:scaleType="fitXY" />
+                android:scaleType="fitXY"/>
+
             <TextView
-                android:layout_marginStart="10dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
                 android:layout_marginTop="20dp"
-                android:text="Group that has the majority votes will be added into the Matched Tab forming a new group.\n\nYou will see the name of other group you matched with."
+                android:text="In the Preferences window, filter out general information to narrow down your matches.\n\nUse the slider to select age range.\n\nSet your current location.\n\nSelect the distance from your current location.\n\nChoose a group of gender that you want to interact with."
                 >
             </TextView>
         </LinearLayout>
+
         <!--        -->
+
     </LinearLayout>
 </ScrollView>
