--- a/app/src/main/res/layout/group_chat_guide.xml
+++ b/app/src/main/res/layout/group_chat_guide.xml
@@ -24,9 +24,10 @@
                 android:layout_width="247dp"
                 android:layout_height="38dp"
                 android:gravity="center"
-                android:text="Matching"
+                android:text="Group Chat"
                 android:textAppearance="?attr/textAppearanceHeadline5"
                 android:theme="@style/page_title"
+                android:textSize="25sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -34,7 +35,7 @@
                 app:layout_constraintVertical_bias="0.4" />
 
             <Button
-                android:id="@+id/backto_guide_from_batching"
+                android:id="@+id/backto_guide_from_group_chat"
                 style="@style/Widget.AppCompat.Button.Borderless"
                 android:layout_width="59dp"
                 android:layout_height="43dp"
@@ -48,6 +49,7 @@
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintVertical_bias="0.0" />
 
+
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <View
@@ -57,6 +59,7 @@
             android:layout_marginTop="10dp"
             android:layout_marginBottom="20dp"
             android:background="@color/horizontal_line" />
+
 
         <!--        -->
         <LinearLayout
@@ -75,6 +78,14 @@
                 android:gravity="center"
                 android:theme="@style/page_heading">
             </TextView>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Enter group chat of my current group."
+                android:gravity="center"
+                android:layout_marginTop="10dp"
+                >
+            </TextView>
         </LinearLayout>
 
         <LinearLayout
@@ -90,7 +101,7 @@
                 android:layout_width="150dp"
                 android:layout_height="300dp"
                 android:contentDescription="placeholder"
-                android:src="@drawable/matches"
+                android:src="@drawable/before_chat"
                 tools:ignore="HardcodedText"
                 android:scaleType="fitXY"/>
 
@@ -99,7 +110,62 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
                 android:layout_marginTop="20dp"
-                android:text="Navigate to the Match Tab.\n\nDislike by selecting the X button to skip.\n\nLike by selecting the HEART button to initiate the matching.\n\nNote: Must set a primary group prior to viewing matches."
+                android:text="Navigate to My Group tab.\n\nClick anywhere on the space next to the group profile to enter group chat."
+                >
+            </TextView>
+        </LinearLayout>
+
+        <!--        -->
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="20dp"
+            android:layout_marginBottom="10dp">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Alternative Step 1:"
+                android:gravity="center"
+                android:theme="@style/page_heading"
+                android:layout_marginTop="15dp">
+            </TextView>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Enter group chat of my matched group."
+                android:gravity="center"
+                android:layout_marginTop="10dp"
+                >
+            </TextView>
+        </LinearLayout>
+
+        <LinearLayout
+
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="15dp"
+            android:layout_marginEnd="15dp"
+            android:orientation="horizontal"
+            android:padding="20dp"
+            android:background="@drawable/round_corner">
+
+            <ImageView
+                android:layout_width="150dp"
+                android:layout_height="300dp"
+                android:src="@drawable/matched_groups"
+                android:contentDescription="placeholder"
+                tools:ignore="HardcodedText"
+                android:scaleType="fitXY" />
+            <TextView
+                android:layout_marginStart="10dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:text="Navigate to Other Groups tab.\n\nClick anywhere on the space next to the group profile to enter group chat."
                 >
             </TextView>
         </LinearLayout>
@@ -122,6 +188,7 @@
                 android:theme="@style/page_heading"
                 android:layout_marginTop="15dp">
             </TextView>
+
         </LinearLayout>
 
         <LinearLayout
@@ -137,7 +204,7 @@
             <ImageView
                 android:layout_width="150dp"
                 android:layout_height="300dp"
-                android:src="@drawable/vote_matches"
+                android:src="@drawable/groupchat"
                 android:contentDescription="placeholder"
                 tools:ignore="HardcodedText"
                 android:scaleType="fitXY" />
@@ -146,60 +213,10 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
-                android:text="Under the Pending tab, users in the same primary group vote for which group they want to match with.\n\nIf the majority approves, a new group is formed.\n\nUse the button functionality to cast your vote."
-                >
+                android:text="Using the edit text field, send a message to your friends.\n\nThe chat display the date of the message and user name that sent it."
+                tools:ignore="HardcodedText">
             </TextView>
         </LinearLayout>
 
-        <!--        -->
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:layout_marginStart="20dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginEnd="20dp"
-            android:layout_marginBottom="10dp"
-           >
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Step 3:"
-                android:gravity="center"
-                android:theme="@style/page_heading"
-                android:layout_marginTop="15dp">
-            </TextView>
-        </LinearLayout>
-
-        <LinearLayout
-
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="15dp"
-            android:layout_marginEnd="15dp"
-            android:orientation="horizontal"
-            android:padding="20dp"
-
-            android:background="@drawable/round_corner"
-            android:layout_marginBottom="50dp">
-
-            <ImageView
-                android:layout_width="150dp"
-                android:layout_height="300dp"
-                android:src="@drawable/matched_groups"
-                android:contentDescription="placeholder"
-                tools:ignore="HardcodedText"
-                android:scaleType="fitXY" />
-            <TextView
-                android:layout_marginStart="10dp"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
-                android:text="Group that has the majority votes will be added into the Matched Tab forming a new group.\n\nYou will see the name of other group you matched with."
-                >
-            </TextView>
-        </LinearLayout>
-        <!--        -->
     </LinearLayout>
 </ScrollView>
