--- a/app/src/main/res/layout/group_customization_guide.xml
+++ b/app/src/main/res/layout/group_customization_guide.xml
@@ -24,9 +24,10 @@
                 android:layout_width="247dp"
                 android:layout_height="38dp"
                 android:gravity="center"
-                android:text="Matching"
+                android:text="Group Profile Customization"
                 android:textAppearance="?attr/textAppearanceHeadline5"
                 android:theme="@style/page_title"
+                android:textSize="17sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -34,7 +35,7 @@
                 app:layout_constraintVertical_bias="0.4" />
 
             <Button
-                android:id="@+id/backto_guide_from_batching"
+                android:id="@+id/backto_guide_from_group_customization"
                 style="@style/Widget.AppCompat.Button.Borderless"
                 android:layout_width="59dp"
                 android:layout_height="43dp"
@@ -48,6 +49,7 @@
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintVertical_bias="0.0" />
 
+
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <View
@@ -57,6 +59,7 @@
             android:layout_marginTop="10dp"
             android:layout_marginBottom="20dp"
             android:background="@color/horizontal_line" />
+
 
         <!--        -->
         <LinearLayout
@@ -75,6 +78,7 @@
                 android:gravity="center"
                 android:theme="@style/page_heading">
             </TextView>
+
         </LinearLayout>
 
         <LinearLayout
@@ -90,7 +94,7 @@
                 android:layout_width="150dp"
                 android:layout_height="300dp"
                 android:contentDescription="placeholder"
-                android:src="@drawable/matches"
+                android:src="@drawable/mygroup_list"
                 tools:ignore="HardcodedText"
                 android:scaleType="fitXY"/>
 
@@ -99,7 +103,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
                 android:layout_marginTop="20dp"
-                android:text="Navigate to the Match Tab.\n\nDislike by selecting the X button to skip.\n\nLike by selecting the HEART button to initiate the matching.\n\nNote: Must set a primary group prior to viewing matches."
+                android:text="Navigate to My Group tab.\n\nClick on a selected group profile photo."
                 >
             </TextView>
         </LinearLayout>
@@ -137,7 +141,7 @@
             <ImageView
                 android:layout_width="150dp"
                 android:layout_height="300dp"
-                android:src="@drawable/vote_matches"
+                android:src="@drawable/discovery_preferences"
                 android:contentDescription="placeholder"
                 tools:ignore="HardcodedText"
                 android:scaleType="fitXY" />
@@ -146,7 +150,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
-                android:text="Under the Pending tab, users in the same primary group vote for which group they want to match with.\n\nIf the majority approves, a new group is formed.\n\nUse the button functionality to cast your vote."
+                android:text="In the group profile, click on 3 dots context menu on the top right corner.\n\nSelect Edit group profile from the menu."
                 >
             </TextView>
         </LinearLayout>
@@ -159,8 +163,7 @@
             android:layout_marginStart="20dp"
             android:layout_marginTop="10dp"
             android:layout_marginEnd="20dp"
-            android:layout_marginBottom="10dp"
-           >
+            android:layout_marginBottom="10dp">
 
             <TextView
                 android:layout_width="match_parent"
@@ -170,6 +173,7 @@
                 android:theme="@style/page_heading"
                 android:layout_marginTop="15dp">
             </TextView>
+
         </LinearLayout>
 
         <LinearLayout
@@ -180,14 +184,13 @@
             android:layout_marginEnd="15dp"
             android:orientation="horizontal"
             android:padding="20dp"
-
-            android:background="@drawable/round_corner"
-            android:layout_marginBottom="50dp">
+            android:layout_marginBottom="50dp"
+            android:background="@drawable/round_corner">
 
             <ImageView
                 android:layout_width="150dp"
                 android:layout_height="300dp"
-                android:src="@drawable/matched_groups"
+                android:src="@drawable/edit_group_pf"
                 android:contentDescription="placeholder"
                 tools:ignore="HardcodedText"
                 android:scaleType="fitXY" />
@@ -196,10 +199,10 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
-                android:text="Group that has the majority votes will be added into the Matched Tab forming a new group.\n\nYou will see the name of other group you matched with."
-                >
+                android:text="Upload a new group picture.\n\nAdd or remove tags.\n\nAdd description about the group.\n\nPreview the edits before saving.\n\nSave to update the edits. Cancel to dismiss the edits."
+                tools:ignore="HardcodedText">
             </TextView>
         </LinearLayout>
-        <!--        -->
+
     </LinearLayout>
 </ScrollView>
